# wukong-backend

./: README.md  cron_reset.py  pyproject.toml  reset_database.py
app/: main.py
app/api/: base.py
app/api/v1/: __init__.py  utils.py
app/api/v1/auth/: auth.py
app/api/v1/case/: __init__.py  case.py
app/api/v1/log/: __init__.py  logs.py
app/api/v1/route/: route.py
app/api/v1/system/: __init__.py  apis.py  departments.py  menus.py  roles.py  users.py
app/core/: auth.py  context_vars.py  dependency.py  exceptions.py  init_app.py  log.py  middleware.py  middlewares.py  migrate.py  settings.py
app/log/: log.py
app/models/: __init__.py  api.py  base.py  button.py  case.py  department.py  log.py  menu.py  role.py  user.py
app/schemas/: apis.py  auth.py  base.py  case.py  departments.py  logs.py  menus.py  roles.py  route.py  users.py
app/services/: apis.py  auth.py  base.py  case.py  department.py  log.py  menu.py  role.py  route.py  user.py
app/utils/: public.py  tools.py
sql/: apis.sql  buttons.sql  departments.sql  logs.sql  menus.sql  menus_buttons.sql  reset_database.py  roles.sql  roles_buttons.sql  roles_menus.sql  users.sql  users_departments.sql  users_roles.sql
test/: conftest.py  test_apis.py  test_auth.py  test_logs.py  test_menus.py  test_roles.py  test_route.py  test_users.py
